--- a/mahjongtournamentmanager.client/src/app/app/splatoon-tournament-edit/splatoon-tournament-edit.component.html
+++ b/mahjongtournamentmanager.client/src/app/app/splatoon-tournament-edit/splatoon-tournament-edit.component.html
@@ -22,13 +22,12 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="gameMode" class="form-label">ゲームモード</label>
+        <label for="gameMode" class="form-label">モード</label>
         <select id="gameMode" class="form-control" formControlName="gameMode">
+          <option>プライベートマッチ</option>
+          <option>オープンマッチ</option>
           <option>ナワバリバトル</option>
-          <option>ガチエリア</option>
-          <option>ガチヤグラ</option>
-          <option>ガチホコバトル</option>
-          <option>ガチアサリ</option>
+          <option>サーモンラン</option>
         </select>
       </div>
       <div class="form-group">
