--- a/mahjongtournamentmanager.client/src/app/register/register.component.html
+++ b/mahjongtournamentmanager.client/src/app/register/register.component.html
@@ -7,7 +7,7 @@
     <form (ngSubmit)="register()">
       <div class="form-group">
         <label for="username" class="form-label">ユーザー名</label>
-        <input type="text" id="username" class="form-control" [(ngModel)]="model.username" name="username" required placeholder="例: YCB_Taro">
+        <input type="text" id="username" class="form-control" [(ngModel)]="model.username" name="username" required placeholder="例: びす">
       </div>
       <div class="form-group">
         <label for="password" class="form-label">パスワード</label>
