--- a/mahjongtournamentmanager.client/src/app/tournament-creation/tournament-creation.component.html
+++ b/mahjongtournamentmanager.client/src/app/tournament-creation/tournament-creation.component.html
@@ -67,10 +67,11 @@
           <select id="status" class="form-control" formControlName="status">
             <option [ngValue]="0">企画中</option>
             <option [ngValue]="1">募集中</option>
+            <option [ngValue]="2">募集終了</option>
           </select>
         </div>
         <div class="form-group">
-          <label for="description" class="form-label">コメント (任意):</label>
+          <label for="description" class="form-label">コメント:</label>
           <textarea id="description" class="form-control" formControlName="description" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-primary btn-block" [disabled]="tournamentForm.invalid">大会を作成</button>
@@ -99,16 +100,25 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="splatoonGameMode" class="form-label">ゲームモード:</label>
+          <label for="splatoonGameMode" class="form-label">モード:</label>
           <select id="splatoonGameMode" class="form-control" formControlName="gameMode" required>
             <option>プライベートマッチ</option>
             <option>オープンマッチ</option>
             <option>ナワバリバトル</option>
+            <option>サーモンラン</option>
           </select>
         </div>
         <div class="form-group">
-          <label for="splatoonComment" class="form-label">コメント (任意):</label>
+          <label for="splatoonComment" class="form-label">コメント:</label>
           <textarea id="splatoonComment" class="form-control" formControlName="comment" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="splatoonStatus" class="form-label">状態:</label>
+          <select id="splatoonStatus" class="form-control" formControlName="status">
+            <option [ngValue]="0">企画中</option>
+            <option [ngValue]="1">募集中</option>
+            <option [ngValue]="2">募集終了</option>
+          </select>
         </div>
         <button type="submit" class="btn btn-primary btn-block" [disabled]="splatoonTournamentForm.invalid">登録</button>
       </form>
