--- a/mahjongtournamentmanager.client/src/app/app/splatoon-tournament-detail/splatoon-tournament-detail.component.css
+++ b/mahjongtournamentmanager.client/src/app/app/splatoon-tournament-detail/splatoon-tournament-detail.component.css
@@ -11,7 +11,25 @@
 
 .page-header {
   text-align: center;
+  position: relative;
   margin-bottom: var(--space-5);
+}
+
+.share-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  border: none;
+  color: var(--text-color-light);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .back-link {
