--- a/mahjongtournamentmanager.client/src/app/tournament-detail.component.scss
+++ b/mahjongtournamentmanager.client/src/app/tournament-detail.component.scss
@@ -11,7 +11,26 @@
 
 .page-header {
   text-align: center;
+  position: relative;
 }
+
+.share-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  border: none;
+  color: var(--text-color-light);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
 
 .back-link {
   display: inline-block;
