--- a/mahjongtournamentmanager.client/src/app/tournament-list/tournament-list.component.html
+++ b/mahjongtournamentmanager.client/src/app/tournament-list/tournament-list.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <header class="page-header">
-    <h3>開催中のイベント</h3>
+    <h1>開催中のイベント</h1>
+    <p>参加したいイベントを選んでください。</p>
   </header>
 
   <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
