参加人数に達したら自動で募集終了となるように修正

--- a/mahjongtournamentmanager.client/src/app/pages/tournament-creation/tournament-creation.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-creation/tournament-creation.component.html
@@ -109,6 +109,10 @@
           </select>
         </div>
         <div class="form-group">
+          <label for="splatoonMaxParticipants" class="form-label">募集人数 (任意):</label>
+          <input type="number" id="splatoonMaxParticipants" class="form-control" formControlName="maxParticipants" min="1">
+        </div>
+        <div class="form-group">
           <label for="splatoonComment" class="form-label">コメント:</label>
           <textarea id="splatoonComment" class="form-control" formControlName="comment" rows="3"></textarea>
         </div>
