--- a/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-edit/splatoon-tournament-edit.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-edit/splatoon-tournament-edit.component.html
@@ -35,6 +35,10 @@
         </select>
       </div>
       <div class="form-group">
+        <label for="maxParticipants" class="form-label">募集人数 (任意):</label>
+        <input type="number" id="maxParticipants" class="form-control" formControlName="maxParticipants" min="1">
+      </div>
+      <div class="form-group">
         <label for="status" class="form-label">状態:</label>
         <select id="status" class="form-control" formControlName="status">
           <option [ngValue]="0">企画中</option>
