--- a/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-edit/splatoon-tournament-edit.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-edit/splatoon-tournament-edit.component.html
@@ -50,6 +50,20 @@
         <label for="comment" class="form-label">コメント:</label>
         <textarea id="comment" class="form-control" formControlName="comment" rows="3"></textarea>
       </div>
+
+      <div class="form-group form-check">
+        <input type="checkbox" id="isPrivate" class="form-check-input" formControlName="isPrivate">
+        <label for="isPrivate" class="form-check-label">限定募集にする</label>
+      </div>
+
+      <div *ngIf="tournamentForm.get('isPrivate')?.value" class="form-group">
+        <label class="form-label">招待するユーザー:</label>
+        <div *ngFor="let user of users" class="form-check">
+          <input type="checkbox" [id]="'user-' + user.id" class="form-check-input" [value]="user.id" (change)="onUserSelectionChange($event)" [checked]="isUserInvited(user.id)">
+          <label [for]="'user-' + user.id" class="form-check-label">{{ user.userName }}</label>
+        </div>
+      </div>
+
       <button type="submit" class="btn btn-primary btn-block" [disabled]="tournamentForm.invalid">{{ isEditMode ? '更新' : '作成' }}</button>
     </form>
   </div>
