--- a/mahjongtournamentmanager.client/src/app/pages/tournament-creation/tournament-creation.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-creation/tournament-creation.component.html
@@ -82,12 +82,13 @@
 
         <div *ngIf="tournamentForm.get('isPrivate')?.value" class="form-group">
           <label class="form-label">招待するユーザー:</label>
-          <div *ngFor="let user of users" class="form-check">
-            <input type="checkbox" [id]="'user-jantama-' + user.id" class="form-check-input" [value]="user.id" (change)="onUserSelectionChange($event, tournamentForm)">
-            <label [for]="'user-jantama-' + user.id" class="form-check-label">{{ user.userName }}</label>
+          <div class="private-list">
+            <div *ngFor="let user of users" class="form-check">
+              <input type="checkbox" [id]="'user-jantama-' + user.id" class="form-check-input" [value]="user.id" (change)="onUserSelectionChange($event, tournamentForm)">
+              <label [for]="'user-jantama-' + user.id" class="form-check-label">{{ user.userName }}</label>
+            </div>
           </div>
         </div>
-
         <button type="submit" class="btn btn-primary btn-block" [disabled]="isSubmitting || tournamentForm.invalid">大会を作成</button>
       </form>
     </div>
@@ -146,9 +147,11 @@
 
         <div *ngIf="splatoonTournamentForm.get('isPrivate')?.value" class="form-group">
           <label class="form-label">招待するユーザー:</label>
-          <div *ngFor="let user of users" class="form-check">
-            <input type="checkbox" [id]="'user-splatoon-' + user.id" class="form-check-input" [value]="user.id" (change)="onUserSelectionChange($event, splatoonTournamentForm)">
-            <label [for]="'user-splatoon-' + user.id" class="form-check-label">{{ user.userName }}</label>
+          <div class="private-list">
+            <div *ngFor="let user of users" class="form-check">
+              <input type="checkbox" [id]="'user-splatoon-' + user.id" class="form-check-input" [value]="user.id" (change)="onUserSelectionChange($event, splatoonTournamentForm)">
+              <label [for]="'user-splatoon-' + user.id" class="form-check-label">{{ user.userName }}</label>
+            </div>
           </div>
         </div>
 
