--- a/mahjongtournamentmanager.client/src/app/pages/tournament-edit/tournament-edit.component.css
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-edit/tournament-edit.component.css
@@ -18,9 +18,9 @@
   gap: var(--space-3);
 }
 
-.form-row .form-group {
-  flex: 1;
-}
+  .form-row .form-group {
+    flex: 1;
+  }
 
 .checkbox-group {
   display: flex;
@@ -28,9 +28,15 @@
   gap: var(--space-1);
 }
 
-.checkbox-group input[type="checkbox"] {
-  width: auto;
-  height: auto;
+  .checkbox-group input[type="checkbox"] {
+    width: auto;
+    height: auto;
+  }
+
+.private-list {
+  display: flex;
+  flex-direction: row;
+  gap:20px;
 }
 
 .message {
@@ -40,10 +46,10 @@
   text-align: center;
 }
 
-.message.error {
-  background-color: rgba(220, 53, 69, 0.1);
-  color: #dc3545;
-}
+  .message.error {
+    background-color: rgba(220, 53, 69, 0.1);
+    color: #dc3545;
+  }
 
 @media (max-width: 768px) {
   .form-row {
