参加時に登録完了のメッセージを表示するように変更

--- a/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-detail/splatoon-tournament-detail.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-detail/splatoon-tournament-detail.component.html
@@ -10,6 +10,7 @@
     </header>
 
     <div class="main-content">
+      <div *ngIf="message" class="alert alert-info">{{ message }}</div>
       <div class="details-grid">
         <div class="card">
           <h3>開催情報</h3>
