--- a/mahjongtournamentmanager.client/src/app/pages/tournament-detail/tournament-detail.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-detail/tournament-detail.component.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="main-content">
+      <div *ngIf="message" class="alert alert-info">{{ message }}</div>
       <div class="details-grid">
         <div class="card">
           <h3>開催情報</h3>
