--- a/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-edit/splatoon-tournament-edit.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/splatoon-tournament-edit/splatoon-tournament-edit.component.html
@@ -44,6 +44,7 @@
           <option [ngValue]="0">企画中</option>
           <option [ngValue]="1">募集中</option>
           <option [ngValue]="2">募集終了</option>
+          <option [ngValue]="3">終了</option>
         </select>
       </div>
       <div class="form-group">
