各イベントの参加人数を表示

--- a/mahjongtournamentmanager.client/src/app/pages/tournament-list/tournament-list.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-list/tournament-list.component.html
@@ -34,6 +34,7 @@
           <span *ngIf="tournament.gameTitle === '雀魂'" class="date-info">{{ tournament.startDate | date:'yyyy/MM/dd' }}～</span>
           <span *ngIf="tournament.gameTitle === 'スプラトゥーン'" class="date-info">{{ tournament.startDate | date:'yyyy/MM/dd' }}</span>
           <span *ngIf="tournament.gameTitle !== '雀魂' && tournament.gameTitle !== 'スプラトゥーン'" class="date-info">{{ tournament.startDate | date:'yyyy/MM/dd' }}</span>
+          <span class="participants-info">参加人数: {{ tournament.participantsCount }}</span>
         </div>
       </div>
     </div>
