--- a/mahjongtournamentmanager.client/src/app/pages/tournament-list/tournament-list.component.css
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-list/tournament-list.component.css
@@ -14,10 +14,10 @@
   }
 
   .page-header p {
-  font-size: 1.1rem;
-  color: var(--main-color);
-  opacity: 0.8;
-}
+    font-size: 1.1rem;
+    color: var(--main-color);
+    opacity: 0.8;
+  }
 
 .loading-spinner {
   display: flex;
@@ -69,43 +69,43 @@
 }
 
   .tournament-card.jantama::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url(/assets/icons/mahjong_character.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto 80%;
-  opacity: 0.2; /* 背景画像の透明度を調整 */
-  z-index: 1;
-}
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/assets/icons/mahjong_character.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 80%;
+    opacity: 0.2; /* 背景画像の透明度を調整 */
+    z-index: 1;
+  }
 
-.tournament-card.splatoon::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url(/assets/icons/splatoon_charactoer.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto 80%;
-  opacity: 0.2; /* 背景画像の透明度を調整 */
-  z-index: 1;
-}
+  .tournament-card.splatoon::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/assets/icons/splatoon_charactoer.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 80%;
+    opacity: 0.2; /* 背景画像の透明度を調整 */
+    z-index: 1;
+  }
 
-.tournament-card .card-content {
-  position: relative;
-  z-index: 2;
-}
+  .tournament-card .card-content {
+    position: relative;
+    z-index: 2;
+  }
 
-.tournament-card.jantama .card-content,
-.tournament-card.splatoon .card-content {
-}
+  .tournament-card.jantama .card-content,
+  .tournament-card.splatoon .card-content {
+  }
 
   .tournament-card:hover {
     transform: translateY(-4px);
@@ -160,6 +160,9 @@
   font-size: 0.875rem;
   color: var(--main-color);
   opacity: 0.7;
+  justify-content: space-between;
+  display: inline-flex;
+  width: 100%;
 }
 
 .status-badge {
