--- a/mahjongtournamentmanager.client/src/app/pages/tournament-creation/tournament-creation.component.html
+++ b/mahjongtournamentmanager.client/src/app/pages/tournament-creation/tournament-creation.component.html
@@ -7,6 +7,7 @@
       <select id="gameTypeSelection" class="form-control" [(ngModel)]="selectedGameType" name="gameTypeSelection">
         <option value="雀魂">雀魂</option>
         <option value="スプラトゥーン">スプラトゥーン</option>
+        <option value="マリオカート">マリオカート</option>
       </select>
     </div>
 
@@ -156,6 +157,71 @@
         </div>
 
         <button type="submit" class="btn btn-primary btn-block" [disabled]="isSubmitting || splatoonTournamentForm.invalid">登録</button>
+      </form>
+    </div>
+
+    <!-- Mario Kart Form -->
+    <div *ngIf="selectedGameType === 'マリオカート'">
+      <form [formGroup]="marioKartTournamentForm" (ngSubmit)="createTournament()">
+        <div class="form-group">
+          <label for="marioKartTournamentName" class="form-label">企画名:</label>
+          <input type="text" id="marioKartTournamentName" class="form-control" formControlName="tournamentName" required>
+        </div>
+        <div class="form-group">
+          <label for="marioKartEventDate" class="form-label">開催日:</label>
+          <input type="date" id="marioKartEventDate" class="form-control" formControlName="eventDate" required>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label for="marioKartStartTime" class="form-label">開始時刻:</label>
+            <input type="time" id="marioKartStartTime" class="form-control" formControlName="startTime" required>
+          </div>
+          <div class="form-group">
+            <label for="marioKartEndTime" class="form-label">終了時刻:</label>
+            <input type="time" id="marioKartEndTime" class="form-control" formControlName="endTime" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="marioKartGameMode" class="form-label">モード:</label>
+          <select id="marioKartGameMode" class="form-control" formControlName="gameMode" required>
+            <option>個人戦</option>
+            <option>タッグ戦</option>
+            <option>チーム戦</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="marioKartMaxParticipants" class="form-label">募集人数 (任意):</label>
+          <input type="number" id="marioKartMaxParticipants" class="form-control" formControlName="maxParticipants" min="1" max="24">
+        </div>
+        <div class="form-group">
+          <label for="marioKartComment" class="form-label">コメント:</label>
+          <textarea id="marioKartComment" class="form-control" formControlName="comment" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="marioKartStatus" class="form-label">状態:</label>
+          <select id="marioKartStatus" class="form-control" formControlName="status">
+            <option [ngValue]="0">企画中</option>
+            <option [ngValue]="1">募集中</option>
+            <option [ngValue]="2">募集終了</option>
+          </select>
+        </div>
+
+        <div class="form-group form-check">
+          <input type="checkbox" id="marioKartIsPrivate" class="form-check-input" formControlName="isPrivate">
+          <label for="marioKartIsPrivate" class="form-check-label">募集を限定する</label>
+        </div>
+
+        <div *ngIf="marioKartTournamentForm.get('isPrivate')?.value" class="form-group">
+          <label class="form-label">招待するユーザー:</label>
+          <div class="private-list">
+            <div *ngFor="let user of users" class="form-check">
+              <input type="checkbox" [id]="'user-mario-kart-' + user.id" class="form-check-input" [value]="user.id" (change)="onUserSelectionChange($event, marioKartTournamentForm)">
+              <label [for]="'user-mario-kart-' + user.id" class="form-check-label">{{ user.userName }}</label>
+            </div>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="isSubmitting || marioKartTournamentForm.invalid">登録</button>
       </form>
     </div>
 
